chore : adding git link

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <button id="show-btn">Check Palindrome</button>
         <p id="result"></p>
     </main>
+    <div><small>View this Project on <a href="https://github.com/Xitija/Palindrome-Date">Github</a></small></div>
     <script src="script.js"></script>
 </body>
 </html>
