--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
     <main>
     <h3>Palindrome Date</h3>
+        <label for="date-input">Select a date</label>
         <input type="date" id="date-input" />
         <button id="show-btn">Check Palindrome</button>
         <p id="result"></p>
