chore: adding clear button

--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
     <h3>Palindrome Date</h3>
         <label for="date-input">Select a date</label>
         <input type="date" id="date-input" />
-        <button id="show-btn">Check Palindrome</button>
+        <div>
+            <button id="show-btn">Check Palindrome</button>
+            <button id="clear-btn">Clear</button>
+        </div>
         <p id="result"></p>
     </main>
     <div><small>View this Project on <a href="https://github.com/Xitija/Palindrome-Date">Github</a></small></div>
